syntax = "proto3";

package j5.schema.v1;

import "j5/schema/v1/schema.proto";

option go_package = "github.com/pentops/jsonapi/gen/j5/v1/schema_j5pb";

message API {
  repeated Package packages = 1;
  map<string, Schema> schemas = 2;
}

message Package {
  string label = 1;
  string name = 2;
  bool hidden = 3;

  string introduction = 4;
  repeated Method methods = 5;
  repeated Entity entities = 6;
  repeated EventSpec events = 7;
}

message Method {
  string grpc_service_name = 1;
  string grpc_method_name = 2;
  string full_grpc_name = 3;

  string http_method = 4;
  string http_path = 5;
  Schema request_body = 6;
  Schema response_body = 7;
  repeated Parameter query_parameters = 8;
  repeated Parameter path_parameters = 9;
}

message EventSpec {
  string name = 1;
  Schema state_schema = 2;
  Schema event_schema = 3;
}

message Entity {
  Schema state_schema = 1;
  Schema event_schema = 2;
}

message Parameter {
  string name = 1;
  string description = 3;
  bool required = 4;
  Schema schema = 5;
}
